--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,9 @@
     "    node_index   = torch.arange(width * height).reshape(width, height)\n",
     "    down_edges   = torch.column_stack((node_index[1:, :].ravel(), node_index[:height-1, :].ravel()))\n",
     "    right_edges  = torch.column_stack((node_index[:, 1:].ravel(), node_index[:, :width-1].ravel()))\n",
-    "    edge_index = torch.vstack((right_edges, down_edges)).T\n",
+    "    dright_edges = torch.column_stack([node_index[1:, 1:].ravel(), node_index[:height-1, :width-1].ravel()])\n",
+    "    uright_edges = torch.column_stack([node_index[:height-1, 1:].ravel(), node_index[1:, :width-1].ravel()])\n",
+    "    edge_index = torch.vstack((right_edges, down_edges, dright_edges, uright_edges)).T\n",
     "\n",
     "    p_width, p_height = 1./width, 1./height\n",
     "    pos_x, pos_y = np.meshgrid(np.linspace(p_width/2, 1 - p_width, width), \n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
@@ -203,10 +205,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x74dc5c8ff490>"
+       "<matplotlib.image.AxesImage at 0x72b3fcf78e80>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -250,11 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(x=[16384, 5], edge_index=[2, 64770], pos=[16384, 2])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "g = img_as_graph(img)\n",
+    "g\n",
     "# show_graph(g)\n",
     "# plt.draw()"
    ]
@@ -1027,19 +1041,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data(x=[16384, 5], edge_index=[2, 32512], pos=[16384, 2])\n"
+      "Data(x=[16384, 5], edge_index=[2, 64770], pos=[16384, 2])\n"
      ]
     }
    ],
    "source": [
-    "device = 'cuda'\n",
+    "# device = 'cuda'\n",
+    "device = 'cpu'\n",
     "\n",
     "g = g.to(device=device) \n",
     "\n",
@@ -1061,45 +1076,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(indices=tensor([[    0,     1,     2,  ..., 16381, 16382, 16383],\n",
-       "                       [    0,     1,     2,  ..., 16381, 16382, 16383]]),\n",
-       "       values=tensor([1., 1., 1.,  ..., 1., 1., 1.]),\n",
-       "       device='cuda:0', size=(16384, 16384), nnz=16384, dtype=torch.float64,\n",
-       "       layout=torch.sparse_coo)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "indices = np.array([np.arange(n), np.arange(n)], dtype=np.int64)\n",
-    "values  = np.ones(n)\n",
-    "S = torch.sparse_coo_tensor(indices, values, (n, n), device=device)\n",
-    "S"
+    "S_idx = torch.tensor(np.array([np.arange(n), np.arange(n)], dtype=np.int64), device=device)\n",
+    "S_val  = torch.tensor(np.ones(n), device=device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([0.0466, 0.2163, 0.7224,  ..., 0.0505, 0.1040, 0.1677], device='cuda:0',\n",
+       "(tensor([0.0466, 0.2163, 0.7224,  ..., 0.1427, 0.1972, 0.1605],\n",
        "        dtype=torch.float64),\n",
-       " torch.Size([32512]))"
+       " torch.Size([64770]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1119,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 7851,  9136,  9263,  ..., 27235, 27236, 27234], device='cuda:0')"
+       "tensor([15979, 15725, 15740,  ..., 43404, 43526, 59669])"
       ]
      },
      "execution_count": 22,
@@ -1160,27 +1158,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_segments(vi, S):\n",
-    "    vis = S[vi].coalesce()\n",
-    "    return vis"
+    "def get_segments(vi, S_idx, S_val):\n",
+    "    indices = S_idx[0,:] == vi\n",
+    "    vi_idx = S_idx[1, indices]\n",
+    "    vi_val = S_val[indices]\n",
+    "    return vi_idx, vi_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([16384])"
+       "tensor(indices=tensor([[9]]),\n",
+       "       values=tensor([1.]),\n",
+       "       size=(16384,), nnz=1, dtype=torch.float64, layout=torch.sparse_coo)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,20 +1285,42 @@
     "\n",
     "With $o_q = (v_i, v_j)$, we want the merge probability of each segment to which $v_i$ may belong and every segment to which $v_j$ may belong\n",
     "\n",
-    "$ P(V_i, V_j | S) \\in R^{N \\times N}$, where $V_i, V_j \\in R^N$, $S \\in R^{N \\times N}$, $N = |V|$"
+    "$ P(V_i, V_j | S) \\in R^{N \\times N}$, where $V_i, V_j \\in R^N$, $S \\in R^{N \\times N}$, $N = |V|$\n",
+    "\n",
+    "$$ sigmoid(\\frac{MInt(C_i^{q-1},C_j^{q-1})}{w(o_q)}-1)$$\n",
+    "\n",
+    "With,\n",
+    "\n",
+    "$$ MInt(V_i, V_j) = \\min(Int(V_i) + \\tau(V_i), Int(V_j) + \\tau(V_j))  \\in R^{N \\times N}$$\n",
+    "\n",
+    "With $\\min(\\dots)$ actually as the Smooth Minimum Unit of all segment combination. So, in the order of $N^2$. And, \n",
+    "$$\\tau(V_i) = \\frac{k}{\\{|C_i| | i \\in V_i\\}} \\in R^N$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tau(Vi, k=300):\n",
-    "    return pow(Vi * segment_size, -1)*k\n",
+    "def tau(v_idx, k=300):\n",
+    "    return k/segment_size[v_idx]\n",
     "\n",
-    "def MInt(Vi, Vj):\n",
-    "    return min(I[ci] + tau(ci), I[cj] + tau(cj))\n",
+    "def MInt(vi_idx:torch.LongTensor, vi_val:torch.Tensor,\n",
+    "         vj_idx:torch.LongTensor, vj_val:torch.Tensor,\n",
+    "         mu:float = 0.025) -> tuple[torch.Tensor, torch.Tensor]: \n",
+    "    vi_val = (I[vi_idx] + tau(vi_idx)) * vi_val \n",
+    "    vj_val = (I[vj_idx] + tau(vj_idx)) * vj_val \n",
+    "\n",
+    "    vi_val = vi_val.unsqueeze(dim=1)\n",
+    "    vj_val = vj_val.unsqueeze(dim=0)\n",
+    "\n",
+    "    vi_val = -(vi_val @ torch.ones_like(vj_val))\n",
+    "    vj_val = -(torch.ones_like(vi_val) @ vj_val)\n",
+    "\n",
+    "    # Smooth Maximum Unit\n",
+    "    smu = -(vi_val + vj_val + torch.sqrt((vi_val - vj_val)**2 + mu**2))/2 \n",
+    "    return smu \n",
     "\n",
     "def merge_probability(ci, cj, w, temperature=1):\n",
     "    return torch.sigmoid((MInt(ci, cj)/w - 1) * temperature)"
@@ -1304,77 +1328,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([2., 2., 2.,  ..., 2., 2., 2.], device='cuda:0', dtype=torch.float64,\n",
-      "       requires_grad=True) None\n"
-     ]
-    }
-   ],
-   "source": [
-    "vi, vj = g.edge_index[:,edge_queue[0]]\n",
-    "w = edge_weights[edge_queue[0]]\n",
-    "\n",
-    "del Vi\n",
-    "Vi = get_segments(vi, S).to_dense()\n",
-    "Vi = Vi + 2\n",
-    "print(Vi, Vi.grad_fn)\n",
-    "# tau(Vi)\n",
-    "# ci, cj = get_segment(vi, S), get_segment(vj, S)\n",
-    "# p = merge_probability(ci, cj, w)\n",
-    "\n",
-    "# ci, cj, w, p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "tensor([3., 4., 5.], grad_fn=<AddBackward0>) <AddBackward0 object at 0x74dc5054bee0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = torch.tensor([1., 2., 3.], requires_grad=True)\n",
-    "print(A.grad_fn)\n",
-    "A = A + 2\n",
-    "print(A, A.grad_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [2, 4, 6],\n",
-       "       [3, 6, 9]])"
+       "tensor([[1.]], dtype=torch.float64, grad_fn=<SigmoidBackward0>)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = np.array([[1, 2, 3]]).T\n",
-    "B = A.T\n",
+    "edge_weights.requires_grad = True\n",
     "\n",
-    "A @ B"
+    "vi, vj = g.edge_index[:,edge_queue[0]]\n",
+    "w = edge_weights[edge_queue[0]]\n",
+    "\n",
+    "vi_idx, vi_val = get_segments(vi, S_idx, S_val)\n",
+    "vj_idx, vj_val = get_segments(vj, S_idx, S_val)\n",
+    "\n",
+    "vi_val.requires_grad = True \n",
+    "vj_val.requires_grad = True \n",
+    "\n",
+    "smu = MInt(vi_idx, vi_val, vj_idx, vj_val)\n",
+    "temperature = 8\n",
+    "prob = torch.sigmoid((smu/w - 1) * temperature)\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1.],\n",
+      "        [2., 2.],\n",
+      "        [3., 3.]], grad_fn=<MmBackward0>) tensor([[-1.,  4.],\n",
+      "        [-1.,  4.],\n",
+      "        [-1.,  4.]], grad_fn=<MmBackward0>)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.0000,  1.0000],\n",
+       "        [-1.0000,  2.0000],\n",
+       "        [-1.0000,  2.9999]], grad_fn=<DivBackward0>)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Differentiable min of permutation of all values\n",
+    "\n",
+    "A = torch.tensor([[1., 2., 3.]], requires_grad=True).T\n",
+    "B = torch.tensor([[-1., 4.]], requires_grad=True)\n",
+    "\n",
+    "id_A = torch.ones((1, B.shape[1]), requires_grad=False)\n",
+    "A = A @ id_A\n",
+    "id_B = torch.ones((A.shape[0], 1), requires_grad=False)\n",
+    "B = id_B @ B\n",
+    "print(A, B)\n",
+    "\n",
+    "m = 0.015\n",
+    "A, B = -A, -B\n",
+    "-(A + B + torch.sqrt((A - B)**2 + m**2))/2 # Smooth Maximum Unit\n"
    ]
   },
   {
@@ -1621,7 +1650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
