--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2429,20 +2429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.280 ms (163853 allocations: 9.91 MiB)\n"
+      "  5.181 ms (163853 allocations: 9.91 MiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(SparseVector{Float64, Int64}[  [1]  =  1.0,   [2]  =  1.0,   [3]  =  1.0,   [4]  =  1.0,   [5]  =  1.0,   [6]  =  1.0,   [7]  =  1.0,   [8]  =  1.0,   [9]  =  1.0,   [10]  =  1.0  …    [16375]  =  1.0,   [16376]  =  1.0,   [16377]  =  1.0,   [16378]  =  1.0,   [16379]  =  1.0,   [16380]  =  1.0,   [16381]  =  1.0,   [16382]  =  1.0,   [16383]  =  1.0,   [16384]  =  1.0], Dict(15380 => [15380], 11950 => [11950], 4700 => [4700], 4576 => [4576], 6073 => [6073], 15889 => [15889], 1703 => [1703], 12427 => [12427], 7685 => [7685], 14288 => [14288]…), [1, 1, 1, 1, 1, 1, 1, 1, 1, 1  …  1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0  …  0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0])"
+       "(SparseVector{Float64, Int64}[  [1]  =  1.0,   [2]  =  1.0,   [3]  =  1.0,   [4]  =  1.0,   [5]  =  1.0,   [6]  =  1.0,   [7]  =  1.0,   [8]  =  1.0,   [9]  =  1.0,   [10]  =  1.0  …    [16375]  =  1.0,   [16376]  =  1.0,   [16377]  =  1.0,   [16378]  =  1.0,   [16379]  =  1.0,   [16380]  =  1.0,   [16381]  =  1.0,   [16382]  =  1.0,   [16383]  =  1.0,   [16384]  =  1.0], Dict(15380 => [15380], 11950 => [11950], 4700 => [4700], 4576 => [4576], 6073 => [6073], 15889 => [15889], 1703 => [1703], 12427 => [12427], 7685 => [7685], 14288 => [14288]…), [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0  …  0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0])"
       ]
      },
      "metadata": {},
@@ -2453,7 +2453,7 @@
     "function initialize_structures(N::Int) \n",
     "    S = Vector{SparseVector{Float64, Int64}}(undef, N) \n",
     "    segment_hash = Dict{Int64, Vector{Int64}}(zip(1:N, [i] for i in 1:N))\n",
-    "    segment_size = ones(Int64, N)\n",
+    "    segment_size = ones(Float64, N)\n",
     "    internal_diff = zeros(Float64, N)\n",
     "    for i in 1:N\n",
     "        S[i] = sparsevec([i], [1.0], N)\n",
@@ -2764,18 +2764,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×4 Matrix{Float64}:\n",
-       " 0.247326  0.908995  0.360568   0.762756\n",
-       " 0.159478  0.506912  0.177673   0.925287\n",
-       " 0.609758  0.357232  0.0381889  0.475004\n",
-       " 0.618017  0.682549  0.410647   0.193776\n",
-       " 0.622832  0.74557   0.9923     0.60979"
+       "4×5 Matrix{Float64}:\n",
+       " 0.510031  0.288076  0.78371   0.361432  0.635886\n",
+       " 0.759024  0.038433  0.825278  0.663708  0.719201\n",
+       " 0.525658  0.511415  0.628672  0.234947  0.548341\n",
+       " 0.406936  0.118299  0.548955  0.556478  0.997799"
       ]
      },
      "metadata": {},
@@ -2794,22 +2793,22 @@
     "V_K = rand(nv)\n",
     "U_I = rand(1:N, nu)\n",
     "U_K = rand(nu)\n",
-    "P = rand(nv, nu)\n"
+    "P = rand(nu, nv) #column operations are faster\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "4×1 Matrix{SparseVector{Float64, Int64}}:\n",
-       "   [15042]  =  -2.25741\n",
-       "   [5639]  =  -3.20126\n",
-       "   [10855]  =  -1.97938\n",
-       "   [14621]  =  -2.96661"
+       "   [6303]  =  -2.57913\n",
+       "   [4140]  =  -3.00564\n",
+       "   [5764]  =  -2.44903\n",
+       "   [4221]  =  -2.62847"
       ]
      },
      "metadata": {},
@@ -2820,26 +2819,56 @@
     "Ci = @view S[V_I]\n",
     "Cj = @view S[U_I]\n",
     "\n",
-    "Cj_off = -Cj .* sum(P, dims=1)'\n",
+    "Cj_off = -Cj .* sum(P, dims=2)\n",
     "fix_u!(C, C_off, u) = C_off[u] *= C[u]\n",
     "fix_u!.(Cj, Cj_off, u)\n",
-    "\n",
-    "Ci_off = "
+    "Cj_off"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  28.968 μs (420 allocations: 32.23 KiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "4-element view(::Vector{SparseVector{Float64, Int64}}, [15042, 5639, 10855, 14621]) with eltype SparseVector{Float64, Int64}:\n",
-       "   [15042]  =  1.0\n",
-       "   [5639]  =  1.0\n",
-       "   [10855]  =  1.0\n",
-       "   [14621]  =  1.0"
+       "5-element Vector{SparseVector{Float64, Int64}}:\n",
+       "   [2   ]  =  0.5\n",
+       "  [3   ]  =  0.5\n",
+       "  [4   ]  =  0.5\n",
+       "  [123 ]  =  0.510031\n",
+       "  [4140]  =  0.759024\n",
+       "  [4221]  =  0.406936\n",
+       "  [5764]  =  0.525658\n",
+       "  [6303]  =  0.510031\n",
+       "   [123 ]  =  0.288076\n",
+       "  [4140]  =  0.00576496\n",
+       "  [4221]  =  0.118299\n",
+       "  [5764]  =  0.511415\n",
+       "  [6303]  =  0.288076\n",
+       "   [123 ]  =  0.78371\n",
+       "  [4140]  =  0.825278\n",
+       "  [4221]  =  0.548955\n",
+       "  [5764]  =  0.628672\n",
+       "  [6303]  =  0.78371\n",
+       "   [123 ]  =  0.361432\n",
+       "  [4140]  =  0.663708\n",
+       "  [4221]  =  0.556478\n",
+       "  [5764]  =  0.234947\n",
+       "  [6303]  =  0.361432\n",
+       "   [123 ]  =  0.635886\n",
+       "  [4140]  =  0.719201\n",
+       "  [4221]  =  0.997799\n",
+       "  [5764]  =  0.548341\n",
+       "  [6303]  =  0.635886"
       ]
      },
      "metadata": {},
@@ -2847,7 +2876,119 @@
     }
    ],
    "source": [
-    "Cj"
+    "not(C) = dropzeros(sparsevec(C.nzind, 1 .- C.nzval, N))\n",
+    "spmult(A, B) = sparsevec(cat(A.nzind, B.nzind, dims=1), cat(A.nzval, B.nzval, dims=1), N, *)\n",
+    "Ci_off = spmult.(not.(Ci), [sum(col .* Cj) for col in eachcol(P)])\n",
+    "@btime spmult.(not.(Ci), [sum(col .* Cj) for col in eachcol(P)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Internal differences and segment sizes\n",
+    "\n",
+    "If segment $j$ is merged into the segment $i$, $I_i(q+1) = w$. If not, it will remain the same. Therefore we can define the expected value of $I_i$ at the next timestep as:\n",
+    "\n",
+    "$$ E\\big(I_i(q+1)\\big) = \\Big(1-P\\big(M_i^+\\big)\\Big) E\\big(I_i(q)) + P\\big(M_i^+)w $$\n",
+    "\n",
+    "We can argue that, when there is a merge, the segment $j$ can be interpreted as a subset of the larger segment $i$, and can continue to have the same internal difference -- as it makes no sense to talk about the internall diference of an empty segment.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9144995077899217"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Vi_I = rand(1:N, nv)\n",
+    "Vj_I = rand(1:N, nu)\n",
+    "w = rand()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  270.668 ns (7 allocations: 480 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5×1 Matrix{Float64}:\n",
+       " -0.40600019393921905\n",
+       "  0.9127469932157808\n",
+       " -2.004578426885372\n",
+       "  0.3047309867824599\n",
+       " -2.391106948328966"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Mi = sum(P, dims=1)'\n",
+    "internal_diff[Vi_I] = (1 .- Mi) .* internal_diff[Vi_I] + Mi .* w\n",
+    "@btime (1 .- Mi) .* internal_diff[Vi_I] + Mi .* w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If segment $j$ is merged into segment $i$, the size of segment $j$ will remain the same as a subset of the segment $i$, if we are following the same logic used to determine the internal difference. Likewise, the expected size of the segment $i$ at the next timestep will be: \n",
+    "\n",
+    "\n",
+    "$$ E\\big(|C_i|(q+1)\\big) = \\ E\\big(|C_i|(q)\\big) + \\sum_{j \\neq i} P\\big(M_{ij}\\big)  E\\big(|C_j|(q)\\big)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.332 μs (31 allocations: 1.80 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " 2.201648408754255\n",
+       " 0.9562236970590907\n",
+       " 2.7866155394008802\n",
+       " 1.816565002083197\n",
+       " 2.9012263991924225"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "segment_size[Vi_I] .+= [sum(col .* segment_size[Vj_I]) for col in eachcol(P)]\n",
+    "@btime [sum(col .* segment_size[Vj_I]) for col in eachcol(P)]"
    ]
   },
   {
@@ -2903,40 +3044,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  99.167 μs (33 allocations: 481.22 KiB)\n"
+      "  100.029 μs (33 allocations: 481.22 KiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "101×100 Matrix{Float64}:\n",
-       " 0.088856   0.0186055   0.00119865   …  0.0484453   0.025469    0.0885421\n",
-       " 0.311424   0.0652087   0.00420105      0.169792    0.0892642   0.310323\n",
-       " 0.366988   0.0768433   0.00495061      0.200086    0.105191    0.365692\n",
-       " 0.334564   0.0700541   0.00451322      0.182408    0.0958971   0.333382\n",
-       " 0.348657   0.0730049   0.00470332      0.190091    0.0999365   0.347425\n",
-       " 0.458627   0.0960315   0.00618681   …  0.250048    0.131458    0.457007\n",
-       " 0.412822   0.0864404   0.00556891      0.225075    0.118328    0.411364\n",
-       " 0.200019   0.0418817   0.00269822      0.109052    0.0573319   0.199312\n",
-       " 0.0197998  0.00414586  0.000267096     0.0107951   0.00567528  0.0197299\n",
-       " 0.0755219  0.0158135   0.00101878      0.0411754   0.0216471   0.0752551\n",
-       " ⋮                                   ⋱                          \n",
-       " 0.128195   0.0268425   0.00172932      0.0698931   0.0367448   0.127742\n",
-       " 0.499719   0.104636    0.00674112      0.272452    0.143236    0.497953\n",
-       " 0.386733   0.0809776   0.00521697      0.210851    0.11085     0.385367\n",
-       " 0.156076   0.0326807   0.00210544   …  0.0850945   0.0447366   0.155525\n",
-       " 0.460553   0.0964348   0.00621279      0.251099    0.13201     0.458926\n",
-       " 0.283676   0.0593987   0.00382675      0.154663    0.0813109   0.282674\n",
-       " 0.329367   0.0689659   0.00444311      0.179575    0.0944075   0.328204\n",
-       " 0.176897   0.0370402   0.00238631      0.0964459   0.0507044   0.176272\n",
-       " 0.0141202  0.00295662  0.000190479  …  0.00769849  0.00404731  0.0140703"
+       " 0.415008    0.568748    0.301979    …  0.222441   0.264658    0.13146\n",
+       " 0.0985571   0.135068    0.0717146      0.0528258  0.0628516   0.0312195\n",
+       " 0.0518985   0.0711243   0.0377637      0.0278171  0.0330966   0.0164397\n",
+       " 0.327789    0.449218    0.238514       0.175692   0.209037    0.103832\n",
+       " 0.1254      0.171854    0.0912466      0.0672132  0.0799696   0.0397224\n",
+       " 0.0906545   0.124238    0.0659643   …  0.04859    0.057812    0.0287162\n",
+       " 0.270919    0.371281    0.197133       0.14521    0.17277     0.0858179\n",
+       " 0.355243    0.486843    0.258491       0.190407   0.226545    0.112529\n",
+       " 0.258106    0.353722    0.18781        0.138343   0.164599    0.0817592\n",
+       " 0.305301    0.418399    0.222151       0.163639   0.194695    0.0967088\n",
+       " ⋮                                   ⋱                         \n",
+       " 0.223866    0.306798    0.162895       0.11999    0.142763    0.0709132\n",
+       " 0.00713015  0.00977151  0.00518822     0.0038217  0.00454702  0.00225859\n",
+       " 0.0339027   0.046462    0.0246692      0.0181716  0.0216204   0.0107392\n",
+       " 0.0850427   0.116547    0.0618809   …  0.0455821  0.0542332   0.0269386\n",
+       " 0.0440516   0.0603705   0.0320539      0.0236113  0.0280925   0.013954\n",
+       " 0.0905393   0.12408     0.0658804      0.0485283  0.0577384   0.0286797\n",
+       " 0.14371     0.196948    0.10457        0.0770274  0.0916464   0.0455224\n",
+       " 0.378563    0.518801    0.275459       0.202906   0.241416    0.119916\n",
+       " 0.075284    0.103173    0.05478     …  0.0403516  0.0480099   0.0238474"
       ]
      },
      "metadata": {},
@@ -2967,7 +3108,47 @@
     "Vj_I = rand(1:N, 100)\n",
     "Vj_K = rand(100)\n",
     "\n",
+    "P = merge_probability(Vi_I, Vi_K, Vj_I, Vj_K, w, 300/255)\n",
     "@btime merge_probability(Vi_I, Vi_K, Vj_I, Vj_K, w, 300/255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100-element Vector{Float64}:\n",
+       " 0.4150081587541928\n",
+       " 0.5687479470652254\n",
+       " 0.30197859788289017\n",
+       " 0.5248180470574173\n",
+       " 0.18438877714888272\n",
+       " 0.3320366578240237\n",
+       " 0.586575516285633\n",
+       " 0.12406489390369232\n",
+       " 0.28883551169013155\n",
+       " 0.28064447781065444\n",
+       " ⋮\n",
+       " 0.18698275091119973\n",
+       " 0.5145931256028444\n",
+       " 0.2849231908709488\n",
+       " 0.09284629249125319\n",
+       " 0.27184615151625946\n",
+       " 0.36278623463750104\n",
+       " 0.22244075704704083\n",
+       " 0.2646577819402527\n",
+       " 0.1314603378749738"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "P[1,:]"
    ]
   }
  ],
